@@ -1,11 +1,15 @@
 package fr.insee.kraftwerk.api.batch;
 
+import fr.insee.kraftwerk.api.client.GenesisClient;
 import fr.insee.kraftwerk.api.configuration.ConfigProperties;
 import fr.insee.kraftwerk.api.configuration.MinioConfig;
+import fr.insee.kraftwerk.api.configuration.VaultConfig;
 import fr.insee.kraftwerk.api.process.MainProcessing;
 import fr.insee.kraftwerk.api.process.MainProcessingGenesis;
 import fr.insee.kraftwerk.api.services.KraftwerkService;
 import fr.insee.kraftwerk.core.exceptions.KraftwerkException;
+import fr.insee.kraftwerk.core.utils.KraftwerkExecutionContext;
+import fr.insee.kraftwerk.core.utils.KraftwerkExecutionContext;
 import fr.insee.kraftwerk.core.utils.files.FileSystemImpl;
 import fr.insee.kraftwerk.core.utils.files.FileUtilsInterface;
 import fr.insee.kraftwerk.core.utils.files.MinioImpl;
@@ -14,6 +18,8 @@ import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.boot.CommandLineRunner;
+import org.springframework.boot.web.client.RestTemplateBuilder;
+import org.springframework.core.env.Environment;
 import org.springframework.stereotype.Component;
 
 @Component
@@ -25,6 +31,8 @@ public class KraftwerkBatch implements CommandLineRunner {
     FileUtilsInterface fileSystem;
     MinioClient minioClient;
 
+    VaultConfig vaultConfig;
+
     @Value("${fr.insee.postcollecte.files}")
     protected String defaultDirectory;
 
@@ -32,7 +40,7 @@ public class KraftwerkBatch implements CommandLineRunner {
     protected long limitSize;
 
     @Autowired
-    public KraftwerkBatch(ConfigProperties configProperties, MinioConfig minioConfig) {
+    public KraftwerkBatch(ConfigProperties configProperties, MinioConfig minioConfig, VaultConfig vaultConfig, Environment env) {
         this.configProperties = configProperties;
         this.minioConfig = minioConfig;
         if(minioConfig.isEnable()){
@@ -41,6 +49,7 @@ public class KraftwerkBatch implements CommandLineRunner {
         }else{
             fileSystem = new FileSystemImpl(configProperties.getDefaultDirectory());
         }
+        this.vaultConfig = vaultConfig;
     }
 
     @Override
@@ -58,21 +67,13 @@ public class KraftwerkBatch implements CommandLineRunner {
                 //1. Archive at end of execution (false or true)
                 //2. Integrate all reporting datas (false or true)
                 //3. Campaign name
-                //(only for "runMainV2") 4. workers Number (NOTE : "1" by default if NOT PROVIDED)
-                //(only for "runMainV2") 5. worker id (NOTE : "1" by default if NOT PROVIDED)
-                //4. (or 6. for V2) Authentication token for Genesis
+                //4. Authentication token for Genesis
+                //5. Encrypt at end (false or true)
                 KraftwerkServiceType kraftwerkServiceType = KraftwerkServiceType.valueOf(args[0]);
                 boolean archiveAtEnd = Boolean.parseBoolean(args[1]);
                 boolean withAllReportingData = Boolean.parseBoolean(args[2]);
                 String inDirectory = args[3];
-                //========= OPTIMISATIONS PERFS (START) ==========
-                int workersNumber = 1; //initialisation to 1 by default
-                int workerId = 1;  //initialisation to 1 by default
-                if(args.length == 6) {
-                    workersNumber = Integer.parseInt(args[4]); //note : checks have been previously made inside "checkArgs(args)"
-                    workerId = Integer.parseInt(args[5]); //note : checks have been previously made inside "checkArgs(args)"
-                }
-                //========= OPTIMISATIONS PERFS (END) ==========
+                boolean withEncryption = Boolean.parseBoolean(args[5]);
 
                 //Kraftwerk service type related parameters
                 boolean fileByFile = kraftwerkServiceType == KraftwerkServiceType.FILE_BY_FILE;
@@ -91,11 +92,21 @@ public class KraftwerkBatch implements CommandLineRunner {
 
 
                 //Run kraftwerk
+                KraftwerkExecutionContext kraftwerkExecutionContext = new KraftwerkExecutionContext(
+                        inDirectory,
+                        fileByFile,
+                        withDDI,
+                        withEncryption,
+                        limitSize
+                );
+
                 if (kraftwerkServiceType == KraftwerkServiceType.GENESIS) {
                     MainProcessingGenesis mainProcessingGenesis = new MainProcessingGenesis(
-                            configProperties,
-                            fileSystem,
-                            true);
+                        configProperties,
+                        new GenesisClient(new RestTemplateBuilder(), configProperties),
+                        fileSystem,
+                        kraftwerkExecutionContext
+                    );
                     mainProcessingGenesis.runMain(inDirectory,1000);
                 }
                 //========= OPTIMISATIONS PERFS (START) ==========
@@ -109,12 +120,8 @@ public class KraftwerkBatch implements CommandLineRunner {
                 //========= OPTIMISATIONS PERFS (END) ==========
                 else {
                     MainProcessing mainProcessing = new MainProcessing(
-                            inDirectory,
-                            fileByFile,
-                            withAllReportingData,
-                            withDDI,
+                            kraftwerkExecutionContext,
                             defaultDirectory,
-                            limitSize,
                             fileSystem);
                     mainProcessing.runMain();
                 }
@@ -143,35 +150,21 @@ public class KraftwerkBatch implements CommandLineRunner {
      * @throws IllegalArgumentException if invalid argument
      */
     private static void checkArgs(String[] args) throws IllegalArgumentException{
-        //========= OPTIMISATIONS PERFS (START) ==========
-        //We provide retro-compatibility, and authorize old (runMain) & new (runMainV2) process
-        if(args.length != 4 && args.length != 6) {
-            throw new IllegalArgumentException("Invalid number of arguments ! Got %s instead of 4 or 6 !".formatted(args.length));
+        if(args.length != 6) {
+            throw new IllegalArgumentException("Invalid number of arguments ! Got %s instead of 6 !".formatted(args.length));
         }
-        //========= OPTIMISATIONS PERFS (START) ==========
-        if(!args[1].equals("true") && !args[1].equals("false")){
+        if(isNotBoolean(args[1])){
             throw new IllegalArgumentException("Invalid archiveAtEnd boolean argument ! : %s".formatted(args[1]));
         }
-        if(!args[2].equals("true") && !args[2].equals("false")){
+        if(isNotBoolean(args[2])){
             throw new IllegalArgumentException("Invalid withAllReportingData boolean argument ! %s".formatted(args[2]));
         }
-        //========= OPTIMISATIONS PERFS (START) ==========
-        if(args.length == 6) {
-            int workersNb = 0;
-            int workerIndex = 0;
-            try {
-                workersNb = Integer.parseInt(args[4]);
-                workerIndex = Integer.parseInt(args[5]);
-            } catch (NumberFormatException e) {
-                throw new IllegalArgumentException(String.format("workersNb (%s) and/or workerIndex (%s) cannot be parsed as an integer !", args[4], args[5]));
-            }
-            if(workersNb < 1 || workersNb > 10){
-                throw new IllegalArgumentException("Maximum number of workers is 10 ! (got %s)".formatted(args[4]));
-            }
-            if(workerIndex < 1 || workerIndex > workersNb){
-                throw new IllegalArgumentException("workerId cannot be > workers number, which is inconsistant ! (got %s)".formatted(args[5]));
-            }
+        if(isNotBoolean(args[5])){
+            throw new IllegalArgumentException("Invalid withEncryption boolean argument ! %s".formatted(args[5]));
         }
-        //========= OPTIMISATIONS PERFS (END) ==========
+    }
+
+    private static boolean isNotBoolean(String argToCheck){
+        return !argToCheck.equals("true") && !argToCheck.equals("false");
     }
 }
